RESOLVED FIXED267265
Books should not render Object Replacement Character
https://bugs.webkit.org/show_bug.cgi?id=267265
Summary Books should not render Object Replacement Character
Vitor Roriz
Reported 2024-01-09 05:45:41 PST
Some existent EPUB books contain undesired object replacement characters (U+0xFFFC). Books app would like that WebKit does not render them.
Attachments
Vitor Roriz
Comment 1 2024-01-09 11:43:36 PST
Vitor Roriz
Comment 2 2024-01-09 11:44:06 PST
EWS
Comment 3 2024-01-09 17:08:14 PST
Committed 272830@main (f37fd4bfde59): <https://commits.webkit.org/272830@main> Reviewed commits have been landed. Closing PR #22520 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.